--- a/css/styl.css
+++ b/css/styl.css
@@ -277,19 +277,27 @@ ul {
 	background-color: var(--main-accent-color);
 }
 
+
+
 /*********************************************************/
 /*-------------------------INDEX-------------------------*/
 /*********************************************************/
 
 
-
 /*********************HEADING*********************/
 
 .heading {
-	background: #2F303A;
-	
+	max-width: 1600px;
+	height: 600px;
+	margin: 0 auto;
+
 	padding-top: 200px;
 	padding-bottom: 200px;
+
+	background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/studio/bg1.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 }
 
 .heading .container {
@@ -607,6 +615,8 @@ ul {
 	letter-spacing: 0.03em;
 	color: #212121;
 
+	border-radius: 4px;
+
 	padding: 6px 22px;
 }
 
@@ -614,6 +624,8 @@ ul {
 .portfolio-button:focus {
 	color: #FFFFFF;
 	background: var(--main-accent-color);
+
+	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-content-list {
@@ -627,6 +639,10 @@ ul {
 	flex-basis: calc(100% / 3 - 30px);
 	margin-left: 30px;
 	margin-top: 30px;
+}
+
+.portfolio-content-item:hover {
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .portfolio-content-img {
